--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,4 +1,5 @@
 <div class="todos-wrapper">
-
+  <h1>Your Todo's</h1>
+  <app-add-todo-item></app-add-todo-item>
   <app-todo-item></app-todo-item>
 </div>
