update: provide data from input to storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-todo></app-todo>
-<app-done-todo-items></app-done-todo-items>
+<div class="app-wrapper">
+  <app-todo></app-todo>
+  <app-done-todo-items></app-done-todo-items>
+</div>
