--- a/src/app/components/add-todo-item/add-todo-item.component.html
+++ b/src/app/components/add-todo-item/add-todo-item.component.html
@@ -1,3 +1,5 @@
-<p>
-  add-todo-item works!
-</p>
+<div>
+  <span>Add new todo</span>
+  <input placeholder="new todo" #input (keyup.eneter)="addNewTodo(input)">
+  <button (click)="addNewTodo(input)"></button>
+</div>
