update: data provided to todos wrapper component

--- a/src/app/components/add-todo-item/add-todo-item.component.html
+++ b/src/app/components/add-todo-item/add-todo-item.component.html
@@ -1,5 +1,5 @@
 <div>
   <span>Add new todo</span>
-  <input placeholder="new todo" #input (keyup.eneter)="addNewTodo(input)">
-  <button (click)="addNewTodo(input)"></button>
+  <input placeholder="new todo" #input (keyup.enter)="addNewTodo(input)">
+  <button (click)="addNewTodo(input)">Add</button>
 </div>
